<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_m"
        android:orientation="vertical"
        tools:context=".ui.resource.DrawableActivity">
    <ImageView
            android:layout_width="@dimen/imageView"
            android:layout_height="@dimen/imageView"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/imageView_layout_marginTop"
            android:src="@drawable/drawable_ico_144_144a"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_number"/>
    <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/drawable_lock"
            android:drawableEnd="@drawable/drawable_close"
            android:inputType="textPassword"
            android:hint="@string/editText_hint"/>
    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/wechet_login_button_bg"
            android:enabled="false"
            android:text="@string/text_login"
            android:textColor="@drawable/wechet_login_text_color"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textView_marginTop"
            android:text="@string/text_issue"
            android:textColor="@color/textView_bottom"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/imageView_layout_marginTop"
            android:text="@string/text_more"
            android:textColor="@color/textView_bottom"/>
</LinearLayout>
